refactor(canal): 优化启动脚本JVM参数
- canal server 启动脚本会把日志重定向到 canal_stdout.log
  线上运行时会把GC相关日志持续输出到该文件，直到把磁盘打爆；我们使用JVM原生的gc日志配置
  开启日志滚动，最大日志文件32MB，最多存放5个文件，日志调优相关的参数根据业务情况进行±开闭
  启动后标准输出流重定向到 /dev/null 不再输出到文件